# rust-web-frameworks-benchmark

./: Cargo.toml  README.md
axum/: Cargo.toml
base-h1/: Cargo.toml
base-h1/src/: main.rs
base-h2/: Cargo.toml
base-h2/src/: main.rs
base-smol/: Cargo.toml
base-smol/src/: main.rs
base-tiny-http/: Cargo.toml
base-tiny-http/src/: main.rs
base-tokio/: Cargo.toml
base-tokio/src/: main.rs
gotham/src/: main.rs
iron/src/: main.rs
nickel/src/: main.rs
poem/: Cargo.toml
rocket/src/: main.rs
rouille/: Cargo.toml
rouille/src/: main.rs
salvo/: Cargo.toml
salvo/src/: main.rs
sozu/: Cargo.toml
sozu/src/: main.rs
thruster/: Cargo.toml
thruster/src/: main.rs
tide/: Cargo.toml
tide/src/: main.rs
tokio/src/: main.rs
trillium/: Cargo.toml
trillium/src/: main.rs
