[package]
name = "tokio"
version = "0.1.0"
authors = ["Begley Brothers Inc. <begleybrothers@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.1.0"
futures = "0.3.21"
tokio = "1.17.0"
tokio-stream = "0.1.8"
tokio-util = "0.7.0"
