[package]
name = "tide"
version = "0.1.0"
authors = ["Begley Brothers Inc. <begleybrothers@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.16.0"
async-std = { version = "1.10.0", features = ["attributes"] }

[[bin]]
name = "tide"
path = "src/main.rs"
